add turning cat

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  lottie: ^2.3.2
+  animated_splash_screen:
   provider: ^6.0.0
   flutter_localizations:
     sdk: flutter
@@ -26,3 +28,4 @@ flutter:
 
   assets:
     - assets/profilepictures/
+    - assets/animations/turning_cat.json
