add sound on splash screen
Adding sound when the app is lauching

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -28,4 +29,5 @@ flutter:
 
   assets:
     - assets/profilepictures/
-    - assets/animations/turning_cat.json
+    - assets/animations/
+    - assets/sounds/
