--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Users\marti\develop\flutter
-FLUTTER_APPLICATION_PATH=D:\IUT\Semestre 5\SAE\Sprint 1\Projet Code\mobile_app
+FLUTTER_ROOT=C:\Users\barri\develop\flutter
+FLUTTER_APPLICATION_PATH=D:\IUT\S5\SAE\mobile_app
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
