--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
     sdk: flutter
   intl: any
   audioplayers: ^5.2.1
+  url_launcher: ^6.2.1
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
